# genhr

./: .gitignore  pyproject.toml
genhr/: __init__.py  genhr.py  types.py
