[tool.poetry]
name = "genhr"
version = "0.1.0"
description = "Create zipped test files to upload to HackerRank"
authors = ["Thomas Breydo <tbreydo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
